# VirtuaMate

./: .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  Kconfig  README.md
IM/: .gitignore  CMakeLists.txt  Kconfig  README.md  im_api.h  im_config.h  im_platform.h  im_utils.c  im_utils.h
agent/: Kconfig  agent_loop.c  agent_loop.h  context_builder.c  context_builder.h
ai_components/: CMakeLists.txt  Kconfig
ai_components/ai_agent/include/: ai_agent.h
ai_components/ai_agent/src/: ai_agent.c
ai_components/ai_audio/: CMakeLists.txt  Kconfig
ai_components/ai_audio/include/: ai_audio_player.h
ai_components/ai_audio/src/: ai_audio_input.c  ai_audio_player.c
ai_components/ai_main/include/: ai_chat_main.h
ai_components/ai_main/src/: ai_chat_main.c  ai_chat_ui.c
ai_components/ai_mcp/: CMakeLists.txt  Kconfig
ai_components/ai_mcp/include/: ai_mcp_server.h
ai_components/ai_mcp/src/: ai_mcp_server.c  ai_mcp_tools.c
ai_components/ai_mode/: Kconfig
ai_components/ai_mode/include/: ai_manage_mode.h
ai_components/ai_mode/src/: ai_manage_mode.c  ai_mode_free.c  ai_mode_hold.c  ai_mode_oneshot.c  ai_mode_wakeup.c
ai_components/ai_picture/: CMakeLists.txt  Kconfig
ai_components/ai_picture/include/: ai_picture_convert.h  ai_picture_output.h
ai_components/ai_picture/src/: ai_picture_convert.c  ai_picture_output.c
ai_components/ai_skills/: CMakeLists.txt
ai_components/ai_skills/include/: ai_skill.h  skill_cloudevent.h  skill_emotion.h  skill_music_story.h
ai_components/ai_skills/src/: ai_skill.c  skill_cloudevent.c  skill_emotion.c  skill_music_story.c
ai_components/ai_ui/: CMakeLists.txt  Kconfig
ai_components/ai_ui/include/: ai_ui_chat_chatbot.h  ai_ui_chat_oled.h  ai_ui_chat_wechat.h  ai_ui_icon_font.h  ai_ui_manage.h  ai_ui_stream_text.h
ai_components/ai_ui/src/: ai_ui_chat_chatbot.c  ai_ui_chat_oled.c  ai_ui_chat_wechat.c  ai_ui_icon_font.c  ai_ui_manage.c  ai_ui_stream_text.c
ai_components/ai_video/: CMakeLists.txt  Kconfig
ai_components/ai_video/include/: ai_video_input.h
ai_components/ai_video/src/: ai_video_input.c
ai_components/assets/: CMakeLists.txt
ai_components/assets/include/: lang_config.h  local_alert_src.h  media_src.h
ai_components/assets/language/en-US/: language.json
ai_components/assets/language/zh-CN/: language.json
ai_components/assets/src/: local_alert_src_en.c  local_alert_src_zh.c  media_src.c
ai_components/utility/include/: ai_user_event.h
ai_components/utility/src/: ai_user_event.c  stop_watch.c
config/: RaspberryPi.config
cron_service/: Kconfig  cron_service.c  cron_service.h
gateway/: Kconfig  acp_client.c  acp_client.h  chat.py  ws_server.c  ws_server.h
heartbeat/: heartbeat.c  heartbeat.h
include/: app_im.h  ducky_claw_chat.h  tuya_app_config.h  (+1 more)
(+71 files in other folders)
